<resources>
    <string name="app_name">Suara Warga</string>

    <string name="judul_login">Pengaduan dan\nAspirasi Warga</string>
    <string name="tab_login">Login</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="lupa_pass">Forgot Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_google">Register With Gmail</string>
    <string name="tanya_akun">Belum punya akun? </string>
    <string name="regis">Register</string>

    <string name="judulMain">Halo! Selamat Datang</string>
    <string name="subjudulMain">Silakan pilih menu untuk melanjutkan aktivitasmu.</string>
    <string name="menu_kalkulator">Rumus Bangun Ruang</string>
    <string name="menu_skor">Cek Skor Kesehatan</string>
    <string name="menu_custom">Halaman Custom</string>
    <string name="btn_logout">Logout</string>

    <string name="label_persegi">Luas Persegi</string>
    <string name="hint_sisi">Masukkan Sisi</string>
    <string name="btn_hitung_luas">Hitung Luas</string>
    <string name="hasil_luas">Hasil Luas: -</string>
    <string name="label_balok">Volume Balok</string>
    <string name="hint_panjang">Masukkan Panjang</string>
    <string name="hint_lebar">Masukkan Lebar</string>
    <string name="hint_tinggi">Masukkan Tinggi</string>
    <string name="btn_hitung_vol">Hitung Volume</string>
    <string name="hasil_vol">Hasil Volume: -</string>

    <string name="header_edukasi">Edukasi Keuangan</string>
    <string name="hint_search">Cari materi...</string>
    <string name="btn_mulai">Mulai Belajar</string>
    <string name="label_artikel">Artikel Terbaru</string>

    <string name="nama">KASPRO</string>
    <string name="sub_judul">Cek kesehatan finansial tokomu hari ini</string>
    <string name="skor">SKOR KESEHATAN FINANSIAL</string>
    <string name="angka">68</string>
    <string name="warning_text">WASPADA</string>
    <string name="caption">Skor Anda sedikit menurun dibanding minggu lalu</string>

    <string name="placeholder_judul">Kenali Rupiah</string>
    <string name="placeholder_desc">Deskripsi Halaman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>