<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/bg"
    tools:context=".tugasp2.Kalkulator">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_judul"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_desc"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul" />

    <TextView
        android:id="@+id/tvJudulPersegi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_persegi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />

    <EditText
        android:id="@+id/inputSisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_sisi"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvJudulPersegi" />

    <Button
        android:id="@+id/btnHitungPersegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/biru"
        android:text="@string/btn_hitung_luas"
        app:layout_constraintTop_toBottomOf="@+id/inputSisi" />

    <TextView
        android:id="@+id/tvHasilPersegi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hasil_luas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitungPersegi" />

    <TextView
        android:id="@+id/tvJudulBalok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_balok"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHasilPersegi" />

    <EditText
        android:id="@+id/inputPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_panjang"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tvJudulBalok" />

    <EditText
        android:id="@+id/inputLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_lebar"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/inputPanjang" />

    <EditText
        android:id="@+id/inputTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_tinggi"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/inputLebar" />

    <Button
        android:id="@+id/btnHitungBalok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/biru"
        android:text="@string/btn_hitung_vol"
        app:layout_constraintTop_toBottomOf="@+id/inputTinggi" />

    <TextView
        android:id="@+id/tvHasilBalok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hasil_vol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitungBalok" />

</androidx.constraintlayout.widget.ConstraintLayout>