<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/judulMain"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subjudulMain"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:alpha="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnKeKalkulator"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/biru"
        android:text="@string/menu_kalkulator"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tvSubWelcome" />

    <Button
        android:id="@+id/btnKeResult"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/biru"
        android:text="@string/menu_skor"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btnKeKalkulator" />

    <Button
        android:id="@+id/btnKeCustom2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/biru"
        android:text="@string/menu_custom"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btnKeResult" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/warning"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnKeCustom2"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>